Продолжает исправлять разметку и графику.

--- a/catalog.html
+++ b/catalog.html
@@ -4,51 +4,51 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" sizes="any" href="images/favikon.svg" type="image/svg+xml">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>HTML Academy: Седона -> разработчик Арефьева Оксана -> список гостиниц в Седоне</title>
     <!-- <base href="https://github.com/htmlacademy-htmlcss/2288781-sedona-38"/> -->
   </head>
   <body>
     <header class="page-header">
-    <!-- Шапка главной страницы -->
-      <nav class="navigation">
-      <!-- Меню навигации -->
-        <a class="brand" href="index.html" aria-current="page">
-          <img src="images/brand-sedona.svg" alt="Бренд логотипа Седоны" type="image/svg+xml" >
-          <!-- Основной логотип города Седоны-->
-        </a>
-        <ul class="navigation-list">
-        <!-- Список первой части меню -->
-          <li class="navigation-item">
-            <a class="navigation-link" href="index.html" aria-current="page">Главная</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="about.html">О Седоне</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="catalog.html">Гостиницы</a>
-          </li>
-        </ul>
-        <ul class="navigation-list2">
-        <!-- Список второй части меню -->
-          <li class="navigation-item">
-            <a class="navigation-link" type="image/svg+xml" href="#">
-              <span type="image/svg+xml"><img src="images/search.svg"></span>
-            </a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">
-              <span type="image/svg+xml"><img src="images/heart.svg">12</span>
-            </a>
-          </li>
-        </ul>
-        <a class="navigation-button" href="catalog.html">
-          <button>
-            <span>Хочу сюда!</span>
-          </button>
-        </a>
-      </nav>
-    </header>
+      <!-- Шапка главной страницы -->
+        <nav class="navigation">
+        <!-- Меню навигации -->
+          <a class="brend" href="index.html" aria-current="page">
+            <img src="images/brand-sedona.svg" alt="Бренд логотипа Седоны" type="image/svg+xml">
+            <!-- Основной логотип города Седоны-->
+          </a>
+          <ul class="navigation-list">
+          <!-- Список первой части меню -->
+            <li class="navigation-item">
+              <a class="navigation-link" href="index.html">Главная</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="about.html">О Седоне</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="catalog.html" aria-current="page">Гостиницы</a>
+            </li>
+          </ul>
+          <ul class="navigation-list2">
+          <!-- Список второй части меню -->
+            <li class="navigation-item">
+              <a class="navigation-link" type="image/svg+xml" href="#">
+                <span type="image/svg+xml"><img src="images/icons/search.svg" alt="Поиск"></span>
+              </a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">
+                <span type="image/svg+xml"><img src="images/icons/heart.svg" alt="Избранное">12</span>
+              </a>
+            </li>
+          </ul>
+          <a class="navigation-button" href="catalog.html">
+            <button>
+              <span>Хочу сюда!</span>
+            </button>
+          </a>
+        </nav>
+      </header>
     <main class="main-inner">
     <!-- Основное содержимое каталога -->
       <section class="main-inner-header">
@@ -366,38 +366,38 @@
         <nav class="page-footer-contacts">
         <!-- Меню навигации в подвале -->
         <ul class="footer-social-list">
-          <!-- Список меню в подвале -->
-            <li class="footer-social-item">
-              <a class="footer-social-item-vk" href="https://t.me/htmlacademy" type="button">
-                <span type="image/svg+xml"><img src="images/vk-focus.svg" alt="Бренд ВКонтакте"></span>
-              </a>
-            </li>
-            <li class="footer-social-item">
-              <a class="footer-social-item-telegram" href="https://t.me/htmlacademy" type="button">
-                <span type="image/svg+xml"><img src="images/telegram-focus.svg" alt="Бренд Телеграмм"></span>
-              </a>
-            </li>
-            <li class="footer-social-item">
-              <a class="footer-social-item-youtube" href="https://www.youtube.com/user/htmlacademyru" type="button">
-                <span type="image/svg+xml"><img src="images/youtube-focus.svg" alt="Бренд Ютуб"></span>
-              </a>
-            </li>
-          </ul>
-          <ul>
-            <li class="footer-phone">
-              <a href="tel:+7(812)812-12-12">
-                <span>+7(812)812-12-12</span>
-              </a>
-            </li>
-          </ul>
-          <ul>
-            <li class="footer-brand">
-              <a href="https://htmlacademy.ru/">
-                <span class="visually-hidden">Бренд логотипа HTML Академии</span>
-              </a>
-            </li>
-          </ul>
-        </nav>
-      </footer>
+        <!-- Список меню в подвале -->
+          <li class="footer-social-item">
+            <a class="footer-social-item-vk" href="https://t.me/htmlacademy" type="button">
+              <span type="image/svg+xml"><img src="images/icons/vk-focus.svg" alt="Бренд ВКонтакте"></span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="footer-social-item-telegram" href="https://t.me/htmlacademy" type="button">
+              <span type="image/svg+xml"><img src="images/icons/telegram-focus.svg" alt="Бренд Телеграмм"></span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="footer-social-item-youtube" href="https://www.youtube.com/user/htmlacademyru" type="button">
+              <span type="image/svg+xml"><img src="images/icons/youtube-focus.svg" alt="Бренд Ютуб"></span>
+            </a>
+          </li>
+        </ul>
+        <ul>
+          <li class="footer-phone">
+            <a href="tel:+7(812)812-12-12">
+              <span>+7(812)812-12-12</span>
+            </a>
+          </li>
+        </ul>
+        <ul>
+          <li class="footer-brand">
+            <a href="https://htmlacademy.ru/" type="button">
+              <span type="image/svg+xml"><img src="images/brand=htmlacademy.svg" alt="Бренд логотипа HTML Академии"></span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
