--- a/4/catalog.html
+++ b/4/catalog.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" sizes="any" href="images/favikon.svg" type="image/svg+xml">
-    <!-- <link rel="stylesheet" href="styles/styles.css"> -->
+    <link rel="stylesheet" href="styles/styles.css">
     <title>HTML Academy: Седона -> разработчик Арефьева Оксана -> список гостиниц в Седоне</title>
     <!-- <base href="https://github.com/htmlacademy-htmlcss/2288781-sedona-38"/> -->
     <base href="https://htmlacademy-htmlcss.github.io/2288781-sedona-38/4/">
@@ -14,40 +14,40 @@
     <!-- Шапка главной страницы -->
       <nav class="navigation">
       <!-- Меню навигации -->
-        <a class="brend" href="index.html">
-          <img src="#" alt="Бренд логотипа Седоны" type="image/svg+xml" aria-current="page">
+        <a class="brand" href="index.html" aria-current="page">
+          <img src="images/brand-sedona.svg" alt="Бренд логотипа Седоны" type="image/svg+xml" >
           <!-- Основной логотип города Седоны-->
         </a>
         <ul class="navigation-list">
         <!-- Список первой части меню -->
           <li class="navigation-item">
-            <a class="navigation-link" href="index.html">Главная</a>
+            <a class="navigation-link" href="index.html" aria-current="page">Главная</a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="about.html">О Седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="catalog.html" aria-current="page">Гостиницы</a>
+            <a class="navigation-link" href="catalog.html">Гостиницы</a>
           </li>
         </ul>
         <ul class="navigation-list2">
-          <!-- Список второй части меню -->
-            <li class="navigation-item">
-              <a class="navigation-link" href="#">
-                <span src="#" type="image/svg+xml" class="visually-hidden">Поиск</span>
-              </a>
-            </li>
-            <li class="navigation-item">
-              <a class="navigation-link" href="#">
-                <span src="#" type="image/svg+xml" class="visually-hidden">Избранное</span>
-              </a>
-            </li>
-          </ul>
-          <a class="navigation-button" href="catalog.html">
-            <button>
-              <span>Хочу сюда!</span>
-            </button>
-          </a>
+        <!-- Список второй части меню -->
+          <li class="navigation-item">
+            <a class="navigation-link" type="image/svg+xml" href="#">
+              <span type="image/svg+xml"><img src="images/search.svg"></span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span type="image/svg+xml"><img src="images/heart.svg">12</span>
+            </a>
+          </li>
+        </ul>
+        <a class="navigation-button" href="catalog.html">
+          <button>
+            <span>Хочу сюда!</span>
+          </button>
+        </a>
       </nav>
     </header>
     <main class="main-inner">
@@ -56,23 +56,18 @@
       <!-- Первая секция - форма поиска -->
         <h1 class="main-inner-header-title">Гостиницы Седоны</h1>
         <!-- Заголовок каталога -->
-        <img class="main-inner-kanyon-transparent" src="#" alt="Скалы прозрачные">
+        <img class="main-inner-kanyon-transparent" src="images/foto5-filter.jpg" alt="Скалы прозрачные">
         <form class="breadcrumbs">
         <!-- Поисковые символы -->
           <ul class="breadcrumbs-form">
             <li class="breadcrumbs-item">
-              <a class="breadcrumbs-icon" href="#">
+              <a class="breadcrumbs-icon" href="index.html">
                 <span src="#" type="image/svg+xml" class="visually-hidden">Главная</span>
               </a>
             </li>
             <li class="breadcrumbs-item">
-              <a class="breadcrumbs-icon" href="#">
-                <span src="#" type="image/svg+xml" class="visually-hidden">Дальше</span>
-              </a>
-            </li>
-            <li class="breadcrumbs-item">
-              <a class="breadcrumbs-icon" href="#">
-                <span src="#" type="image/svg+xml" class="visually-hidden">Гостиницы</span>
+              <a class="breadcrumbs-icon" href="catalog.html">
+                <span src="#" type="image/svg+xml" class="visually-hidden" aria-current="page">Гостиницы</span>
               </a>
             </li>
           </ul>
@@ -188,127 +183,135 @@
         <!-- Список-фильтр гостиниц Седоны на выбор -->
           <fieldset class="hotel-card-1">
           <!-- Первая карточка -->
-            <a class="hotel-card-1-link" href="#">
+            <a class="hotel-card-1-link" href="#" tabindex="-1">
               <img class="card-1" src="#">
-              <h3 class="hotel-card-1-title">Amara Resort & Spa</h3>
-              <table class="hotel-card-1-name">
-                <tr>
-                  <td class="hotel-card-1-name-type">Гостиница</td>
-                  <td class="hotel-card-1-name-price">От 4000 ₽</td>
-                </tr>
-                <tr>
-                  <td class="hotel-card-1-name-button">
-                    <input class="hotel-card-1-more-detailed" type="submit" href="#" value="Подробнее">
-                  </td>
-                  <td>
-                    <input class="hotel-card-1-favourites" type="submit" href="#" value="В избранное">
-                  </td>
-                </tr>
-                <tr>
-                  <td class="hotel-stars">
-                    <p class="stars-4">
-                      <span class="visually-hidden">Четырехзвездочный отель</span>
-                    </p>
-                  </td>
-                  <td class="hotel-card-1-name-rating">
-                    <input class="hotel-card-1-rating" type="submit" value="Рейтинг: 8.5">
-                  </td>
-                </tr>
-              </table>
             </a>
+            <a class="hotel-card-1-link-titul" href="#" tabindex="-1">
+              <h3 class="hotel-card-1-title">Amara Resort & Spa</h3>
+            </a>
+            <table class="hotel-card-1-name">
+              <tr>
+                <td class="hotel-card-1-name-type">Гостиница</td>
+                <td class="hotel-card-1-name-price">От 4000 ₽</td>
+              </tr>
+              <tr>
+                <td class="hotel-card-1-name-button">
+                  <input class="hotel-card-1-more-detailed" type="submit" href="#" tabindex="-1" value="Подробнее">
+                </td>
+                <td>
+                  <input class="hotel-card-1-favourites" type="submit" href="#" value="В избранное">
+                </td>
+              </tr>
+              <tr>
+                <td class="hotel-stars">
+                  <p class="stars-4">
+                    <span class="visually-hidden">Четырехзвездочный отель</span>
+                  </p>
+                </td>
+                <td class="hotel-card-1-name-rating">
+                  <input class="hotel-card-1-rating" type="submit" value="Рейтинг: 8.5">
+                </td>
+              </tr>
+            </table>
           </fieldset>
           <fieldset class="hotel-card-2">
           <!-- Вторая карточка -->
-            <a class="hotel-card-2-link" href="#">
+            <a class="hotel-card-2-link" href="#" tabindex="-1">
               <img class="card-2" src="#">
-              <h3 class="hotel-card-2-title">Villas at Poco Diablo</h3>
-              <table class="hotel-card-2-name">
-                <tr>
-                  <td class="hotel-card-2-name-type">Гостиница</td>
-                  <td class="hotel-card-2-name-price">От 5000 ₽</td>
-                </tr>
-                <tr>
-                  <td class="hotel-card-2-name-button">
-                    <input class="hotel-card-2-more-detailed" type="submit" href="#" value="Подробнее">
-                  </td>
-                  <td>
-                    <input class="hotel-card-2-favourites" type="submit" href="#" value="В избранное">
-                  </td>
-                </tr>
-                <tr>
-                  <td class="hotel-stars">
-                    <p class="stars-4">
-                      <span class="visually-hidden">Четырехзвездочный отель</span>
-                    </p>
-                  </td>
-                  <td class="hotel-card-2-name-rating">
-                    <input class="hotel-card-2-rating" type="submit" value="Рейтинг: 9.2">
-                  </td>
-                </tr>
-              </table>
             </a>
+            <a class="hotel-card-2-link-titul" href="#" tabindex="-1">
+              <h3 class="hotel-card-2-title">Villas at Poco Diablo</h3>
+            </a>
+            <table class="hotel-card-2-name">
+              <tr>
+                <td class="hotel-card-2-name-type">Гостиница</td>
+                <td class="hotel-card-2-name-price">От 5000 ₽</td>
+              </tr>
+              <tr>
+                <td class="hotel-card-2-name-button">
+                  <input class="hotel-card-2-more-detailed" type="submit" href="#" tabindex="-1" value="Подробнее">
+                </td>
+                <td>
+                  <input class="hotel-card-2-favourites" type="submit" href="#" value="В избранное">
+                </td>
+              </tr>
+              <tr>
+                <td class="hotel-stars">
+                  <p class="stars-4">
+                    <span class="visually-hidden">Четырехзвездочный отель</span>
+                  </p>
+                </td>
+                <td class="hotel-card-2-name-rating">
+                  <input class="hotel-card-2-rating" type="submit" value="Рейтинг: 9.2">
+                </td>
+              </tr>
+            </table>
           </fieldset>
           <fieldset class="hotel-card-3">
           <!-- Третья карточка -->
-            <a class="hotel-card-3-link" href="#">
-              <img class="card-3" src="#">
-              <h3 class="hotel-card-3-title">Desert Quail Inn</h3>
-              <table class="hotel-card-3-name">
-                <tr>
-                  <td class="hotel-card-3-name-type">Гостиница</td>
-                  <td class="hotel-card-3-name-price">От 2500 ₽</td>
-                </tr>
-                <tr>
-                  <td class="hotel-card-3-name-button">
-                    <input class="hotel-card-3-more-detailed" type="submit" href="#" value="Подробнее">
-                  </td>
-                  <td>
-                    <input class="hotel-card-3-favourites" type="submit" href="#" value="В избранное">
-                  </td>
-                </tr>
-                <tr>
-                  <td class="hotel-stars">
-                    <p class="stars-3">
-                      <span class="visually-hidden">Трехзвездочный отель</span>
-                    </p>
-                  </td>
-                  <td class="hotel-card-3-name-rating">
-                    <input class="hotel-card-3-rating" type="submit" value="Рейтинг: 6.9">
-                  </td>
-                </tr>
-              </table>
-            </a>
+          <a class="hotel-card-3-link" href="#" tabindex="-1">
+            <img class="card-3" src="#">
+          </a>
+          <a class="hotel-card-3-link-titul" href="#" tabindex="-1">
+            <h3 class="hotel-card-3-title">Desert Quail Inn</h3>
+          </a>
+          <table class="hotel-card-3-name">
+            <tr>
+              <td class="hotel-card-3-name-type">Гостиница</td>
+              <td class="hotel-card-3-name-price">От 2500 ₽</td>
+            </tr>
+            <tr>
+              <td class="hotel-card-3-name-button">
+                <input class="hotel-card-3-more-detailed" type="submit" href="#" tabindex="-1" value="Подробнее">
+              </td>
+              <td>
+                <input class="hotel-card-3-favourites" type="submit" href="#" value="В избранное">
+              </td>
+            </tr>
+            <tr>
+              <td class="hotel-stars">
+                <p class="stars-3">
+                  <span class="visually-hidden">Трехзвездочный отель</span>
+                </p>
+              </td>
+              <td class="hotel-card-3-name-rating">
+                <input class="hotel-card-3-rating" type="submit" value="Рейтинг: 6.9">
+              </td>
+            </tr>
+          </table>
           </fieldset>
           <fieldset class="hotel-card-4">
           <!-- Четвертая карточка -->
-            <a class="hotel-card-4-link" href="#">
-              <img class="card-4" src="#">
-              <h3 class="hotel-card-4-title">GreenTree Inn</h3>
-              <table class="hotel-card-4-name">
-                <tr>
-                  <td class="hotel-card-4-name-type">Гостиница</td>
-                  <td class="hotel-card-4-name-price">От 1500 ₽</td>
-                </tr>
-                <tr>
-                  <td class="hotel-card-4-name-button">
-                    <input class="hotel-card-4-more-detailed" type="submit" href="#" value="Подробнее">
-                  </td>
-                  <td>
-                    <input class="hotel-card-4-favourites" type="submit" href="#" value="В избранное">
-                  </td>
-                </tr>
-                <tr>
-                  <td class="hotel-stars">
-                    <p class="stars-2">
-                      <span class="visually-hidden">Двухзвездочный отель</span>
-                    </p>
-                  </td>
-                  <td class="hotel-card-4-name-rating">
-                    <input class="hotel-card-4-rating" type="submit" value="Рейтинг: 5.0">
-                  </td>
-                </tr>
-              </table>
-            </a>
+          <a class="hotel-card-3-link" href="#" tabindex="-1">
+            <img class="card-3" src="#">
+          </a>
+          <a class="hotel-card-3-link-titul" href="#" tabindex="-1">
+            <h3 class="hotel-card-3-title">GreenTree Inn</h3>
+          </a>
+          <table class="hotel-card-4-name">
+            <tr>
+              <td class="hotel-card-4-name-type">Гостиница</td>
+              <td class="hotel-card-4-name-price">От 1500 ₽</td>
+            </tr>
+            <tr>
+              <td class="hotel-card-4-name-button">
+                <input class="hotel-card-4-more-detailed" type="submit" href="#" tabindex="-1" value="Подробнее">
+              </td>
+              <td>
+                <input class="hotel-card-4-favourites" type="submit" href="#" value="В избранное">
+              </td>
+            </tr>
+            <tr>
+              <td class="hotel-stars">
+                <p class="stars-2">
+                  <span class="visually-hidden">Двухзвездочный отель</span>
+                </p>
+              </td>
+              <td class="hotel-card-4-name-rating">
+                <input class="hotel-card-4-rating" type="submit" value="Рейтинг: 5.0">
+              </td>
+            </tr>
+          </table>
           </fieldset>
         </form>
       </section>
@@ -363,30 +366,21 @@
       <!-- Подвал главной страницы -->
         <nav class="page-footer-contacts">
         <!-- Меню навигации в подвале -->
-          <ul class="footer-social-list">
+        <ul class="footer-social-list">
           <!-- Список меню в подвале -->
             <li class="footer-social-item">
               <a class="footer-social-item-vk" href="https://t.me/htmlacademy" type="button">
-  <!--               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="14" viewBox="0 0 24 14" fill="none">
-                  <path fill-rule="evenodd" clip-rule="evenodd" d="M23.45 0.948C23.616 0.402 23.45 0 22.655 0H20.03C19.362 0 19.054 0.347 18.887 0.73C18.887 0.73 17.552 3.926 15.661 6.002C15.049 6.604 14.771 6.795 14.437 6.795C14.27 6.795 14.019 6.604 14.019 6.057V0.948C14.019 0.292 13.835 0 13.279 0H9.151C8.734 0 8.483 0.304 8.483 0.593C8.483 1.214 9.429 1.358 9.526 3.106V6.904C9.526 7.737 9.373 7.888 9.039 7.888C8.149 7.888 5.984 4.677 4.699 1.003C4.45 0.288 4.198 0 3.527 0H0.9C0.15 0 0 0.347 0 0.73C0 1.412 0.89 4.8 4.145 9.281C6.315 12.341 9.37 14 12.153 14C13.822 14 14.028 13.632 14.028 12.997V10.684C14.028 9.947 14.186 9.8 14.715 9.8C15.105 9.8 15.772 9.992 17.33 11.467C19.11 13.216 19.403 14 20.405 14H23.03C23.78 14 24.156 13.632 23.94 12.904C23.702 12.18 22.852 11.129 21.725 9.882C21.113 9.172 20.195 8.407 19.916 8.024C19.527 7.533 19.638 7.314 19.916 6.877C19.916 6.877 23.116 2.451 23.449 0.948H23.45Z" fill="#68A2CA"/>
-                </svg> -->
-                <span class="visually-hidden">ВКонтакте</span>
+                <span type="image/svg+xml"><img src="images/vk-focus.svg" alt="Бренд ВКонтакте"></span>
               </a>
             </li>
             <li class="footer-social-item">
               <a class="footer-social-item-telegram" href="https://t.me/htmlacademy" type="button">
-  <!--               <svg xmlns="http://www.w3.org/2000/svg" width="18" height="16" viewBox="0 0 18 16" fill="none">
-                  <path d="M16.785 0.0992597L0.840489 6.24776C-0.247661 6.68481 -0.241365 7.29184 0.640845 7.56253L4.73445 8.83953L14.2058 2.8637C14.6537 2.59121 15.0629 2.7378 14.7265 3.03636L7.05283 9.96185H7.05103L7.05283 9.96275L6.77045 14.1823C7.18413 14.1823 7.36669 13.9925 7.59871 13.7686L9.58705 11.8351L13.7229 14.89C14.4855 15.31 15.0332 15.0941 15.2229 14.1841L17.9379 1.38885C18.2158 0.274623 17.5126 -0.229883 16.785 0.0992597Z" fill="#68A2CA"/>
-                </svg> -->
-                <span class="visually-hidden">Телеграмм</span>
+                <span type="image/svg+xml"><img src="images/telegram-focus.svg" alt="Бренд Телеграмм"></span>
               </a>
             </li>
             <li class="footer-social-item">
               <a class="footer-social-item-youtube" href="https://www.youtube.com/user/htmlacademyru" type="button">
-  <!--               <svg xmlns="http://www.w3.org/2000/svg" width="22" height="17" viewBox="0 0 22 17" fill="none">
-                  <path d="M18.607 0H3.17413C1.31343 0 0 1.59375 0 3.4V13.4937C0 15.4062 1.31343 17 3.17413 17H18.8259C20.4677 17 22 15.4062 22 13.6V3.4C21.7811 1.59375 20.4677 0 18.607 0ZM7.66169 12.5375V4.4625L14.995 8.5L7.66169 12.5375Z" fill="#68A2CA"/>
-                </svg> -->
-                <span class="visually-hidden">Ютуб</span>
+                <span type="image/svg+xml"><img src="images/youtube-focus.svg" alt="Бренд Ютуб"></span>
               </a>
             </li>
           </ul>
