Продолжает разобраться со стилями.

--- a/index.html
+++ b/index.html
@@ -39,14 +39,12 @@
         <!-- Список второй части меню -->
           <li class="navigation-item">
             <a class="navigation-link" href="#">
-              <img src="images/icons/search.svg" alt="Поиск." width="20" height="20" type="image/svg+xml">
-              <!-- <span class="visually-hidden">Поиск</span> -->
+              <span class="visually-hidden">Поиск</span>
             </a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">
-              <img src="images/icons/heart.svg" alt="Избранное." width="20" height="20" type="image/svg+xml">
-              <!-- <span class="visually-hidden">Избранное</span> -->
+              <span class="visually-hidden">Избранное</span>
             </a>
           </li>
         </ul>
@@ -66,7 +64,6 @@
         <p class="visually-hidden">Welcome to the gorgeous Sedona, because the Grand Canyon sucks!</p>
         <img src="images/content/welcome.svg" type="image/svg+xml" width="458" height="352" alt="Welcome to the gorgeous Sedona, because the Grand Canyon sucks!" aria-hidden="true"><br>
         <img src="images/content/foto1-mountans.jpg" width="1200" height="485" alt="Горы в окрестностях горы Седоны.">
-        <img src="images/zig-zag.png" width="1200" height="57" alt="Зиг заг.">
       </section>
       <section class="advantages">
       <!-- Вторая секция - причины, заслуживающие внимания -->
